set the overflow-x to hidden on both the html and the body to make sure that .main-nav is not visible after translateing it x by 100%. Also for that to work I had to set position relative for the .main-nav on the body

--- a/css/general.css
+++ b/css/general.css
@@ -83,13 +83,16 @@ Medium: 11px
 html {
   /*percentage of the users browser font-size settings*/
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
+  position: relative;
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+  overflow-x: hidden;
 }
 
 ul {
